Edits page and adds cardano and blocks image

--- a/generic.html
+++ b/generic.html
@@ -32,10 +32,14 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">Why we choose to support Cardano?</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<p>Because we are agree with the background philosophy and inspiration behind the Cardano blockchain.
+								This blockchain platform for changemakers, innovators, and visionaries, with the tools and technologies 
+								required to create possibility for the many, as well as the few, and bring about positive global change. 
+								It is built for a sustainable future, to help people work better together, trust ONE another, and build 
+								global solutions to global problems with a new standard in technology to challenge the old and activate a 
+								new age of sustainable, globally-distributed innovation. Working together, we achieve more for the many!</p>
 						</div>
 					</section>
 
