Adds cardano image onto the generic page

--- a/generic.html
+++ b/generic.html
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Why we choose to support Cardano?</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/cardano.jpg" alt="" /></span>
 							<p>Because we are agree with the background philosophy and inspiration behind the Cardano blockchain.
 								This blockchain platform for changemakers, innovators, and visionaries, with the tools and technologies 
 								required to create possibility for the many, as well as the few, and bring about positive global change. 
