Adds steps for staking cardano with info pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ADA ONE Pool</title>
+		<title>ADA ONE Pool [ONE1]</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,9 +20,12 @@
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#why">Why we choose to support Cardano?</a></li>
+							<li><a href="#goal">Our Goals</a></li>
+							<li><a href="#about_staking">What is Caldano Staking?</a></li>
+							<li><a href="#delegate">Start Delegating</a></li>
+							<li><a href="#feature">Our Features</a></li>
+							<li><a href="#touch">Get in touch</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,20 +37,20 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>ADA ONE</h1>
+							<h1>ADA ONE Pool [ONE1]</h1>
 							<p>
 								The world will be as ONE
 							</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#why" class="button scrolly">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style2 spotlights">
+					<section id="why" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/cardano.jpg" alt="" data-position="center center" /></a>
+							<a href="why_support_cardano.html" class="image"><img src="images/cardano.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Why we choose to support Cardano?</h2>
@@ -56,13 +59,16 @@
 										required to create possibility for the many, as well as the few...
 									</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="why_support_cardano.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
+					</section>
+
+					<section id="goal" class="wrapper style3 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/blocks.jpg" alt="" data-position="top center" /></a>
+							<a href="#goal" class="image"><img src="images/blocks.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Our Goal</h2>
@@ -72,8 +78,42 @@
 						</section>
 					</section>
 
+					<section id="about_staking" class="wrapper style4 spotlights">
+						<section>
+							<a href="#about_staking" class="image"><img src="images/what_is_staking.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>What is Caldano Staking?</h2>
+									<p>
+										Explore what is Caldano Staking
+									</p>
+									<ul class="actions">
+										<li><a href="what_is_staking.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+					</section>
+
+				<!-- How to delegate banner -->
+				<section id="delegate" class="wrapper style1 spotlights">
+					<section>
+						<a href="how_to_delegate.html" class="image"><img src="images/cardano_staking.jpeg" alt="" data-position="center center" /></a>
+						<div class="content">
+							<div class="inner">
+								<h2>How to Delegate to [ONE1]</h2>
+								<p>Dear delegators, please join us and the world will be as ONE!
+									Delegation has nothing to do with sending your ADA, you only delegate them to get your rewards. Here are the steps... 
+								</p>
+								<ul class="actions">
+									<li><a href="why_support_cardano.html" class="button">Learn more</a></li>
+								</ul>
+							</div>
+						</div>
+					</section>
+				</section>
 				<!-- Two -->
-					<section id="two" class="wrapper style3 fade-up">
+					<section id="feature" class="wrapper style2 fade-up">
 						<div class="inner">
 							<h2>Our Features</h2>
 							<p></p>
@@ -111,11 +151,14 @@
 						</div>
 					</section>
 
+
+
 				<!-- Three -->
-					<section id="three" class="wrapper style1 fade-up">
+					<section id="touch" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p></p>
+							<p>Feel free to contact us and ask us questions.</p>
+							<!-- <p></p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -134,13 +177,13 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
+											<li><a href="mailto:test@gmail.com" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
-								</section>
+								</section> -->
 								<section>
 									<ul class="contact">
-										<li>
+										<!-- <li>
 											<h3>Address</h3>
 											<span>12345 Somewhere Road #654<br />
 											Nashville, TN 00000-0000<br />
@@ -153,15 +196,12 @@
 										<li>
 											<h3>Phone</h3>
 											<span>(000) 000-0000</span>
-										</li>
+										</li> -->
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+												<li><a href="https://twitter.com/ADAOnePool" class="icon brands fa-twitter"><span class="label">Twitter</span></a> @ADAOnePool</li>
+												<br><li><a class="icon brands fa-telegram"><span class="label">Telegram</span></a> ADA ONE Pool [ONE1]</li>
 											</ul>
 										</li>
 									</ul>
