--- a/why_support_cardano.html
+++ b/why_support_cardano.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>ADA ONE Pool [ONE1]</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,16 +15,17 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
-				<nav>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-					</ul>
-				</nav>
-			</header>
+		<header id="header">
+			<a href="index.html" class="title">ONE1</a>
+			<nav>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="why_support_cardano.html" class="active">Why we support Cardano</a></li>
+					<li><a href="what_is_staking.html">What is Cardano Staking</a></li>
+					<li><a href="how_to_delegate.html">How to Delegate</a></li>
+				</ul>
+			</nav>
+		</header>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -49,7 +50,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Ada One. All rights reserved.</li><li></li></a></li>
 					</ul>
 				</div>
 			</footer>
