--- a/elements.html
+++ b/elements.html
@@ -20,7 +20,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
+						<li><a href="why_support_cardano.html">Generic</a></li>
 						<li><a href="elements.html"  class="active">Elements</a></li>
 					</ul>
 				</nav>
@@ -345,7 +345,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Ada One. All rights reserved.</li><li></li></a></li>
 					</ul>
 				</div>
 			</footer>
